#299 corrected boonex.com links

--- a/install.txt
+++ b/install.txt
@@ -1,1 +1,1 @@
-Please, check this URL: http://www.boonex.com/trac/dolphin/wiki/Dol7Installation
+Please, check this URL: https://www.boonex.com/trac/dolphin/wiki/BriefInstall
